# ChangeLog for www-apps/tikiwiki
# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-apps/tikiwiki/ChangeLog,v 1.31 2006/06/25 07:37:43 dertobi123 Exp $

  25 Jun 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  tikiwiki-1.9.4.ebuild:
  ppc stable, bug #136723

*tikiwiki-1.9.4 (18 Jun 2006)

  18 Jun 2006; Renat Lumpau <rl03@gentoo.org> +tikiwiki-1.9.4.ebuild:
  Version bump, security bug #136723.

  10 Jun 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  -tikiwiki-1.9.1.1.ebuild, tikiwiki-1.9.3.2.ebuild:
  ppc stable, remove vulnerable ebuild. bug #134483.

*tikiwiki-1.9.3.2 (09 Jun 2006)

  09 Jun 2006; Renat Lumpau <rl03@gentoo.org> -tikiwiki-1.9.3.1.ebuild,
  +tikiwiki-1.9.3.2.ebuild:
  Version bump wrt security bug #134483.

*tikiwiki-1.9.3.1 (04 May 2006)

  04 May 2006; Renat Lumpau <rl03@gentoo.org> -tikiwiki-1.9.3.ebuild,
  +tikiwiki-1.9.3.1.ebuild:
  Version bump

*tikiwiki-1.9.3 (30 Apr 2006)

  30 Apr 2006; Renat Lumpau <rl03@gentoo.org> -tikiwiki-1.9.2.ebuild,
  +tikiwiki-1.9.3.ebuild:
  Version bump

  07 Feb 2006; Renat Lumpau <rl03@gentoo.org> -tikiwiki-1.8.6.ebuild,
  tikiwiki-1.9.1.1.ebuild, tikiwiki-1.9.2.ebuild:
  Fixes for #116346, removed old version.

*tikiwiki-1.9.2 (07 Nov 2005)

  07 Nov 2005; Renat Lumpau <rl03@gentoo.org> tikiwiki-1.9.1.1.ebuild,
  +tikiwiki-1.9.2.ebuild:
  Version bump

  26 Oct 2005; Renat Lumpau <rl03@gentoo.org> -files/xmlrpc2-1.8.5.patch,
  -tikiwiki-1.8.5-r2.ebuild:
  Removing old version

  24 Oct 2005; Michael Hanselmann <hansmi@gentoo.org>
  tikiwiki-1.9.1.1.ebuild:
  Stable on ppc.

  23 Oct 2005; Renat Lumpau <rl03@gentoo.org> -tikiwiki-1.9.1.ebuild:
  Removing vulnerable version

*tikiwiki-1.9.1.1 (23 Oct 2005)

  23 Oct 2005; Renat Lumpau <rl03@gentoo.org> files/postinstall-en.txt,
  +tikiwiki-1.9.1.1.ebuild:
  Version bump wrt security bug #109858.

*tikiwiki-1.9.1 (24 Aug 2005)
*tikiwiki-1.8.6 (24 Aug 2005)
