@@ -1,6 +1,10 @@
 # ChangeLog for www-apps/tikiwiki
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-apps/tikiwiki/ChangeLog,v 1.31 2006/06/25 07:37:43 dertobi123 Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-apps/tikiwiki/ChangeLog,v 1.32 2006/07/09 21:11:39 rl03 Exp $
+
+  09 Jul 2006; Renat Lumpau <rl03@gentoo.org> -tikiwiki-1.9.3.2.ebuild,
+  tikiwiki-1.9.4.ebuild:
+  Housekeeping; einfo->elog
 
   25 Jun 2006; Tobias Scherbaum <dertobi123@gentoo.org>
   tikiwiki-1.9.4.ebuild:
